<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.talend.dataprep</groupId>
    <artifactId>dataprep-parent</artifactId>
    <version>1.0.RC1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>dataprep-parent</name>
    <description>dataprep parent pom</description>
    <modules>
        <module>dataprep-backend</module>
        <module>dataprep-webapp</module>
    </modules>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.3.2</version>
                </plugin>
                <plugin>
                    <groupId>com.spotify</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>0.3.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.4</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>
    <repositories>
        <repository>
            <id>snapshots</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <updatePolicy>never</updatePolicy>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>releases</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/releases</url>
            <releases>
                <updatePolicy>never</updatePolicy>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opensource-snapshots</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/TalendOpenSourceSnapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <updatePolicy>never</updatePolicy>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opensource-releases</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/TalendOpenSourceRelease</url>
            <releases>
                <updatePolicy>never</updatePolicy>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <distributionManagement>
        <snapshotRepository>
            <id>talend_nexus_deployment</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>talend_nexus_deployment</id>
            <url>http://newbuild.talend.com:8081/nexus/content/repositories/releases/</url>
        </repository>
    </distributionManagement>
</project>

